<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_view_title_text">No Item Found</string>
    <string name="empty_view_subtitle_text">Start by adding a product</string>
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_edit">Enter quantity</string>
    <string name="add_product">Add a Product</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_dialog_msg">Delete All Products?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_insert_product_failed">Product Insertion Failed</string>
    <string name="editor_insert_product_successful">Product insertion successful</string>
    <string name="editor_update_product_failed">Product Update Failed</string>
    <string name="editor_update_product_successful">Product Updated Successfully</string>
    <string name="editor_delete_product_failed">Product not deleted</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_product_add">Add Product</string>
    <string name="editor_product_edit">Edit Product</string>
    <string name="unsaved_changes_dialog_msg">Save Changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
</resources>
